--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -701,9 +701,9 @@ li::before {
   border: 1px solid rgb(192, 192, 192);
   border-radius: 5px;
   border: none;
-  transform: translateX(calc(80vw - 55px));
+  transform: translate(calc(80vw - 55px),calc(-10vh));
   width: 20vw;
-  height: 80vh;
+  height: 70vh;
   padding: 1px 1px 1px 1px;
   background: linear-gradient(to top, rgb(255, 255, 255) 80%, rgb(240, 240, 240));
   color: black;
